# quma

./: .dockerignore  .justfile  Dockerfile  README.md
.github/: copilot-instructions.md
backend/: Cargo.toml
backend/macros/: Cargo.toml
backend/macros/src/: crud.rs  lib.rs  pagination.rs
backend/src/: constants.rs  main.rs
backend/src/http/: health.rs  mod.rs  quadlets.rs  users.rs
backend/src/models/: mod.rs  quadlet.rs  response.rs
