[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
axum = "0.8"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower = "0.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["tracing", "env-filter", "local-time"] }
